force-app/main/default/objects/SpecVersion__c/SpecVersion__c.object-meta.xml
<CustomObject>
    <label>Specification Version</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specification Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>