force-app/main/default/objects/SpecVersion__c/fields/Bearer__c.field-meta.xml
<CustomField>
    <fullName>Bearer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bearer</label>
    <referenceTo>WheelsetComponent__c</referenceTo>
    <relationshipLabel>Specification Versions (Bearer)</relationshipLabel>
    <relationshipName>Specification_Versions1</relationshipName>
    <type>Lookup</type>
</CustomField>