force-app/main/default/objects/SpecVersion__c/fields/BearerProducer__c.field-meta.xml
<CustomField>
    <fullName>BearerProducer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bearer Producer</label>
    <referenceTo>WheelPartProducer__c</referenceTo>
    <relationshipLabel>Specification Versions (Bearer Producer)</relationshipLabel>
    <relationshipName>Specification_Versions1</relationshipName>
    <type>Lookup</type>
</CustomField>