force-app/main/default/objects/SpecVersion__c/fields/BoxProducer__c.field-meta.xml
<CustomField>
    <fullName>BoxProducer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Box Producer</label>
    <referenceTo>WheelPartProducer__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>