force-app/main/default/objects/SpecVersion__c/fields/Coating__c.field-meta.xml
<CustomField>
    <fullName>Coating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coating</label>
    <referenceTo>WheelCover__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>