force-app/main/default/objects/SpecVersion__c/fields/CoatingType__c.field-meta.xml
<CustomField>
    <fullName>CoatingType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coating Type</label>
    <referenceTo>WheelCoatingType__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>