force-app/main/default/objects/SpecVersion__c/fields/CoatingTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>CoatingTypeTxt__c</fullName>
    <formula>IF(SpecBase__r.Country__r.Name=&apos;Ukraine&apos;,  CoatingType__r.NameUKR__c,  CoatingType__r.NameENG__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cover Type</label>
    <type>Text</type>
</CustomField>