force-app/main/default/objects/SpecVersion__c/fields/DrawingVersion__c.field-meta.xml
<CustomField>
    <fullName>DrawingVersion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing</label>
    <referenceTo>DrawingVersion__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>