force-app/main/default/objects/SpecVersion__c/fields/ExecCategory__c.field-meta.xml
<CustomField>
    <fullName>ExecCategory__c</fullName>
    <label>Exec Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WheelExecCategory</valueSetName>
    </valueSet>
</CustomField>