force-app/main/default/objects/SpecVersion__c/fields/HasSpecReq__c.field-meta.xml
<CustomField>
    <fullName>HasSpecReq__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Special Req</label>
    <type>Checkbox</type>
</CustomField>