force-app/main/default/objects/SpecVersion__c/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wheel Hub</label>
    <referenceTo>WheelHub__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>