force-app/main/default/objects/SpecVersion__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <formula>VALUE(SpecBase__r.ID_ERP__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>