force-app/main/default/objects/SpecVersion__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>Wheel_Inspection__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>