force-app/main/default/objects/SpecVersion__c/fields/InspectionName__c.field-meta.xml
<CustomField>
    <fullName>InspectionName__c</fullName>
    <formula>IF(SpecBase__r.Country__r.Name=&apos;Ukraine&apos;,  Inspection__r.NameUKR__c,  Inspection__r.NameENG__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Name</label>
    <type>Text</type>
</CustomField>