force-app/main/default/objects/SpecVersion__c/fields/Marking__c.field-meta.xml
<CustomField>
    <fullName>Marking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marking</label>
    <referenceTo>WheelMarkType__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>