force-app/main/default/objects/SpecVersion__c/fields/NameForDoc__c.field-meta.xml
<CustomField>
    <fullName>NameForDoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name For Doc</label>
    <referenceTo>ProdNameForDoc__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>