force-app/main/default/objects/SpecVersion__c/fields/NameStd__c.field-meta.xml
<CustomField>
    <fullName>NameStd__c</fullName>
    <formula>IF(SpecBase__r.Country__r.Name	=&apos;Ukraine&apos;,  NameForDoc__r.NameUA__c,  NameForDoc__r.NameEN__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name acc. to Standard</label>
    <type>Text</type>
</CustomField>