force-app/main/default/objects/SpecVersion__c/fields/OilHole__c.field-meta.xml
<CustomField>
    <fullName>OilHole__c</fullName>
    <label>Oil Hole</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WheelOilerHole</valueSetName>
    </valueSet>
</CustomField>