force-app/main/default/objects/SpecVersion__c/fields/Packing__c.field-meta.xml
<CustomField>
    <fullName>Packing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packing</label>
    <referenceTo>WheelPackType__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>