force-app/main/default/objects/SpecVersion__c/fields/PackingType__c.field-meta.xml
<CustomField>
    <fullName>PackingType__c</fullName>
    <formula>IF(SpecBase__r.Country__r.Name=&apos;Ukraine&apos;,  Packing__r.NameUKR__c, Packing__r.NameENG__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packing Type</label>
    <type>Text</type>
</CustomField>