force-app/main/default/objects/SpecVersion__c/fields/PlugType__c.field-meta.xml
<CustomField>
    <fullName>PlugType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plug Type</label>
    <referenceTo>WheelPlugType__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>