force-app/main/default/objects/SpecVersion__c/fields/ProdNameForDoc__c.field-meta.xml
<CustomField>
    <fullName>ProdNameForDoc__c</fullName>
    <formula>NameForDoc__r.NameEN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod Name For Doc</label>
    <type>Text</type>
</CustomField>