force-app/main/default/objects/SpecVersion__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purpose</label>
    <referenceTo>WheelPurpose__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>