force-app/main/default/objects/SpecVersion__c/fields/Shape__c.field-meta.xml
<CustomField>
    <fullName>Shape__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shape</label>
    <referenceTo>WheelShape__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>