force-app/main/default/objects/SpecVersion__c/fields/SpecAxle__c.field-meta.xml
<CustomField>
    <fullName>SpecAxle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spec Axle</label>
    <referenceTo>SpecVersion__c</referenceTo>
    <relationshipLabel>Specification Versions (Spec Axle)</relationshipLabel>
    <relationshipName>Specification_Versions1</relationshipName>
    <type>Lookup</type>
</CustomField>