force-app/main/default/objects/SpecVersion__c/fields/SpecBase__c.field-meta.xml
<CustomField>
    <fullName>SpecBase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SpecBase</label>
    <referenceTo>SpecificationBase__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>