force-app/main/default/objects/SpecVersion__c/fields/SpecWheel__c.field-meta.xml
<CustomField>
    <fullName>SpecWheel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spec Wheel</label>
    <referenceTo>SpecVersion__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>