force-app/main/default/objects/SpecVersion__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard</label>
    <referenceTo>WheelProductStandard__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>