force-app/main/default/objects/SpecVersion__c/fields/SteelGrade__c.field-meta.xml
<CustomField>
    <fullName>SteelGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Steel Grade</label>
    <referenceTo>WheelSteelGrade__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>