force-app/main/default/objects/SpecVersion__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type</label>
    <referenceTo>WheelAxlialLoadType__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>