force-app/main/default/objects/SpecVersion__c/fields/WeightAllKG__c.field-meta.xml
<CustomField>
    <fullName>WeightAllKG__c</fullName>
    <label>Weight All (kg)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>