force-app/main/default/objects/SpecVersion__c/fields/WeightBoxKG__c.field-meta.xml
<CustomField>
    <fullName>WeightBoxKG__c</fullName>
    <label>Weight Box (kg)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>