force-app/main/default/objects/SpecVersion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID__c</columns>
    <columns>ProdNameForDoc__c</columns>
    <columns>WheelProduct__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>